--- a/HelloSignproject.html
+++ b/HelloSignproject.html
@@ -3,15 +3,18 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="style.css">
   <title>Babs project</title>
+
   <script src="https://cdn.hellosign.com/public/js/embedded/v2.9.0/embedded.development.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 <body>
   <div class= "title">
-    <h1> My simple app </h1>
+    <h1> Babs app </h1>
 
   </div>
   <form id="form">
@@ -21,7 +24,7 @@
     URL <input type="url" id="signUrl"><br>
 
   Skip Domain verification?  <input type="checkbox" id="skipDomain" checked><br>
-  Close and redirect  <input type="checkbox" id="redirect"><br>
+
 
       <input class ="button1" id="buttonSubmit" type="submit" value="Submit"/>
 
@@ -37,7 +40,7 @@
       signUrl  = $("#signUrl").val();
       clientId = $("#clientID").val();
       skipDomain = $("#skipDomain").is(":checked");
-      redirectTo =
+
 
       client = new HelloSign({
         clientId: clientId
